Add clear all markers from the map method

--- a/assets/map.html
+++ b/assets/map.html
@@ -125,6 +125,10 @@
 
 			//addTestMarkers();
 		}
+
+		function clearAllMarkers() {
+			TourMe.addMarkersLayer.clearLayers();
+		}
 		
 		function setOnlineLayer(){
 			TourMe.map.removeLayer(offlineLayer);
