--- a/assets/map.html
+++ b/assets/map.html
@@ -68,7 +68,7 @@
 
 			offlineLayer = L.tileLayer(url, {
 				maxZoom: 18,
-				attribution: 'Map data © OpenStreetMap contributors'
+				attribution: 'Map data &copy; OpenStreetMap contributors'
 			});
 
 			onlineLayer = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -77,7 +77,7 @@
 			});
 
 			TourMe.map = L.map('map',{
-				center: [61.800322,34.320819],
+				center: [61.800322,34.320819], // FIXME
 				zoom: 15,
 				layers: [onlineLayer],
 				fadeAnimation: false,
@@ -120,16 +120,6 @@
 				}
 				
 			});
-
-			/*var baseLayers = {
-				"online": online,
-				"offline": offline
-			};*/
-
-
-			//L.control.layers(baseLayers).addTo(TourMe.map);
-
-			//addTestMarkers();
 		}
 
 		function clearAllMarkers() {
@@ -141,34 +131,13 @@
 			TourMe.map.removeLayer(onlineLayer);
 			TourMe.map.addLayer(onlineLayer);
 		}
+
 		function setOfflineLayer(){
 			TourMe.map.removeLayer(offlineLayer);
 			TourMe.map.removeLayer(onlineLayer);
 			TourMe.map.addLayer(offlineLayer);
 		}
-		/*function addTestMarkers(){
-				//test
-			var i = 0;
-			for (;i<5;i++){
-				addMarker("arch",61.800322,34.320819+i*0.002,"arch");
-			}
-			i = 0;
-			for (;i<5;i++){
-				addMarker("palm-tree-export",61.800322+0.001,34.320819+i*0.002,"palm");
-			}
-			i = 0;
-			for (;i<5;i++){
-				addMarker("tower",61.800322+0.002,34.320819+i*0.002,"tower");
-			}
-				i = 0;
-			for (;i<5;i++){
-				addMarker("information",61.800322+0.003,34.320819+i*0.002,"information");
-			}
-				i = 0;
-			for (;i<5;i++){
-				addMarker("bustour",61.800322+0.004,34.320819+i*0.002,"bustour");
-			}
-		}*/
+
 		function addMarker(group, lat, lng, description){
 			var url = "js/images/markers/"+group+".png";
 			var markerIcon = L.icon({
@@ -186,9 +155,11 @@
 		function print(){
 			alrt("str");
 		}
+
 		function setZoom(num){
 			TourMe.map.setZoom(num);
 		}
+
 	</script>
 </body>
 </html>
