--- a/assets/map.html
+++ b/assets/map.html
@@ -39,7 +39,12 @@
 		}
 
 		function setPrepareMode(flag) {
-			PREPARE_MODE = flag == true ? true : false; 
+			PREPARE_MODE = flag == true ? true : false;
+			
+			TourMe.map.removeLayer(offlineLayer);
+			TourMe.map.removeLayer(onlineLayer);
+			TourMe.map.addLayer(prepareModeLayer);
+			setZoom(5); // FIXME
 		}
 
 		function setUrl(url){
@@ -71,9 +76,17 @@
 				attribution: 'Map data &copy; OpenStreetMap contributors'
 			});
 
+			onlineLayerAttribution = '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>';
+
 			onlineLayer = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 				maxZoom: 18,
-				attribution: '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>'
+				attribution: onlineLayerAttribution
+			});
+
+			prepareModeLayer = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+				minZoom : 3,
+				maxZoom : 8,
+				attribution : onlineLayerAttribution
 			});
 
 			TourMe.map = L.map('map',{
