Add 'show-item-on-map' from article feature (almost work)

--- a/assets/map.html
+++ b/assets/map.html
@@ -180,6 +180,10 @@
 			TourMe.map.setZoom(num);
 		}
 
+		function centerWithZoomAt(latitude, longitude, zoom) {
+			TourMe.map.setView([latitude, longitude], zoom, null);
+		}
+
 	</script>
 </body>
 </html>
