--- a/TourMe/src/main/assets/legal.html
+++ b/TourMe/src/main/assets/legal.html
@@ -113,6 +113,17 @@ See the License for the specific language governing permissions and
 limitations under the License.
 </pre>
 
+<br/><br/>
+Icons:
+<pre>
+Airplane by Simon Child from The Noun Project
+City by Thibault Geffroy from The Noun Project
+Flag by Alessandro Suraci from The Noun Project
+Mortar Board by Ryan Beck from The Noun Project
+Forest by Juan Pablo Bravo from The Noun Project
+Mountains by James Fenton from The Noun Project
+Article by Sergey Krivoy from The Noun Project
+</pre>
 
 
 </body>
