--- a/Landing/index.html
+++ b/Landing/index.html
@@ -42,7 +42,7 @@
 
 <section class="row">
 	<article class="grid_12" id="footer">
-		These applications are the part of grant KA179 of Karelia ENPI programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland.<br/>Ideas and suggestions: atroshko@cs.karelia.ru		
+		These applications are the part of grant KA322 of Karelia ENPI CBC programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland.<br/>Ideas and suggestions: atroshko@cs.karelia.ru		
 	</article>
 	
 
